# Trees_simulator_p2

./: CMakeLists.txt  angle_between_vectors.h  circle.cpp  circle.h  dna.cpp  dna.h  dna.h.autosave  id_object.cpp  id_object.h  interpolation.cpp  interpolation.h  leaf.cpp  leaf.h  main.cpp  opengl.h  planet.cpp  planet.h  rect.cpp  rect.h  root.cpp  root.h  seed.cpp  seed.h  simulation_core.cpp  simulation_core.h  stem.cpp  stem.h  tree.cpp  tree.h  tree_part.cpp  tree_part.h  tree_part_manager.cpp  tree_part_manager.h  triangle.cpp  triangle.h  window.cpp  window.h
